src/App.css
html, body {
  margin: 0px;
  padding: 0px;
  font-family: "Open Sans",sans-serif;
}

.App{
  position: fixed;
  width: 100%;
  height: 100%;
}

.App-dark{
  background-color: #1d1d1d;
}

/*test, remove*/

.TestPalletBoxes{
  display: flex;
  width: 100%;
  justify-content: left;
  margin: 5px;
}

.TestPalletBoxLG{
  width: 100px;
  height: 100px;
  border-radius: 20px;
  margin: 5px;
}

.TestPalletBoxMD{
  width: 100px;
  height: 100px;
  border-radius: 50%;
  margin: 5px;
}

.TestPalletBoxSM{
  width: 100px;
  height: 100px;
  border-top-right-radius: 50%;
}

/*Animations*/

 @-webkit-keyframes slide-in-right {
  0% {
    -webkit-transform: translateX(1000px);
            transform: translateX(1000px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateX(0);
            transform: translateX(0);
    opacity: 1;
  }
}
@keyframes slide-in-right {
  0% {
    -webkit-transform: translateX(1000px);
            transform: translateX(1000px);
    opacity: 0;
  }
  100% {
    -webkit-transform: translateX(0);
            transform: translateX(0);
    opacity: 1;
  }
}

